--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<p>The 8th Note</p>
 			<b><a href="">Repairs</a></b>
   			<b><a href="">Products</a></b>
-  			<b><a class="active" href="analog.html">Home</a></b>
+  			<b><a class="active" href="index.html">Home</a></b>
 		</div>
 
 		<hr style="height:2px;border-width:0;color:black;background-color:black; width: 95%;">
